--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-carousel": "^0.11.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.0",
     "react-navigation-stack": "^1.5.1",
